# ros2_diff_drive

./: .gitignore  README.md
arduino/: EncoderUno.h  L298.h  Protocol.h  TrimEqualizer.h  chamanC.ino  trimCode_original.ino
ros2_ws/src/arduino_bridge/: package.xml  setup.py
ros2_ws/src/arduino_bridge/arduino_bridge/: serial_bridge.py
ros2_ws/src/arduino_bridge/launch/: arduino_bridge.launch.py
ros2_ws/src/gy87_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/gy87_driver/gy87_driver/: bmp180_node.py  hmc5883l_node.py  mpu6050_node.py  qmc5883l_node.py  utils.py
ros2_ws/src/gy87_driver/launch/: gy87_bringup.launch.py
ros2_ws/src/gy87_driver/resource/: gy87_driver
ros2_ws/src/gyro_distance/: package.xml  setup.cfg  setup.py
ros2_ws/src/gyro_distance/gyro_distance/: gyro_distance_node.py
ros2_ws/src/gyro_distance/launch/: gyro_distance.launch.py
ros2_ws/src/gyro_distance/resource/: gyro_distance
ros2_ws/src/inertial_distance/: package.xml  setup.cfg  setup.py
ros2_ws/src/inertial_distance/inertial_distance/: __init__.py  inertial_distance_node.py
ros2_ws/src/inertial_distance/launch/: inertial_distance.launch.py
ros2_ws/src/my_bringup/: package.xml  setup.py
ros2_ws/src/my_bringup/launch/: multi.launch.py
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: my_first_node.cpp
ros2_ws/src/my_py_pkg/: setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: my_first_node.py
ros2_ws/src/ros2_diff_drive_bridge/: setup.cfg  setup.py
ros2_ws/src/ros2_diff_drive_bridge/config/: params.yaml
ros2_ws/src/ros2_diff_drive_bridge/ros2_diff_drive_bridge/: serial_bridge.py
src/ros2_diff_drive_bridge/: package.xml
src/ros2_diff_drive_bridge/launch/: bridge.launch.py
