<?xml version="1.0"?>
<package format="3">
  <name>arduino_bridge</name>
  <version>0.1.0</version>
  <description>Serial bridge between ROS2 and Arduino motor controller</description>
  <maintainer email="you@example.com">Vikas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
