<?xml version="1.0"?>
<package format="3">
  <name>gy87_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 drivers for GY-87/HW-290 (MPU6050, HMC5883L, BMP180)</description>
  <maintainer email="you@example.com">Vikas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-smbus</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
