<?xml version="1.0"?>
<package format="3">
  <name>gyro_distance</name>
  <version>0.0.3</version>
  <description>IMU-only distance from GY-87: auto topic discovery, dual QoS, gravity compensation, ZUPT, accel scale + initial attitude calibration.</description>
  <maintainer email="you@example.com">Vikas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
