<?xml version="1.0"?>
<package format="3">
  <name>inertial_distance</name>
  <version>0.0.1</version>
  <description>Integrate accelerometer with gyro orientation to estimate distance; ZUPT+encoder blend.</description>
  <maintainer email="you@example.com">Vikas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
